k8s/platform/tailscale-operator/templates/argocd-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale
  namespace: argocd
  annotations:
    tailscale.com/proxy-class: kernel-tun
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd.tailbecff0.ts.net
  rules:
    - host: argocd.tailbecff0.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
