k8s/platform/tailscale-operator/templates/grafana-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale
  namespace: observability
  annotations:
    tailscale.com/proxy-class: kernel-tun
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana.tailbecff0.ts.net
  rules:
    - host: grafana.tailbecff0.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-grafana
                port:
                  number: 80
