k8s/platform/tailscale-operator/templates/openbao-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-tailscale
  namespace: openbao
  annotations: {}
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - openbao.tailbecff0.ts.net
  rules:
    - host: openbao.tailbecff0.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-active
                port:
                  number: 8200
